# X-moe

./: .gitignore  LICENSE  README.md
CodeAnalyze/FVPDeasm/FVPDeasm/: FVPDeasm.cpp  FVPDeasm.vcxproj  FVPDeasm.vcxproj.filters  ReadMe.txt
CodeAnalyze/FVPDeasm/Release/: Text.txt
EngineTransplant/onscripter-20120712/: Android.mk  Makefile.onscripter  ScriptParser.h
EngineTransplant/xclannad-7hc/xclannad-0.07h/: Makefile  config.h  config.status  xlovesys.cc
EngineTransplant/xclannad-7hc/xclannad-0.07h/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
EngineTransplant/xclannad-7hc/xclannad-0.07h/font/: Makefile  Makefile.in  font_face.cc  font_peer_ft2.cc  text_stream.cc
EngineTransplant/xclannad-7hc/xclannad-0.07h/music2/: Makefile  Makefile.in  koedec.cc  koedec_ogg.cc  music.cc  music.h  wavfile.cc  ~
EngineTransplant/xclannad-7hc/xclannad-0.07h/scn2k/: Makefile  Makefile.in  scn2k_cmd.cc  scn2k_grp.cc  scn2k_grp.cc~  scn2k_impl.cc  scn2k_text.cc  xp  ~
EngineTransplant/xclannad-7hc/xclannad-0.07h/system/: Makefile  Makefile.in  file.cc  system_config.cc  system_config.h
EngineTransplant/xclannad-7hc/xclannad-0.07h/window/: Makefile  Makefile.in  button.cc  event.cc  picture.cc  widget.cc
EngineTransplant/xkanon-gtk/: COPYING.ja  Makefile.in  README  acconfig.h  aclocal.m4  anm.cc  anm.h  ard.cc  ard.h  autogen.sh  backlog_dump  backlog_dump.cc  check_cgm.cc  clear_ipc  config.h.in  configure  configure.in  file.cc  file.h  game_opt.cc  getlog.pl  image_cursor.cc  image_cursor.h  image_di.cc  image_di.h  image_di_16bpp.cc  image_di_32bpp.cc  image_di_Xbpp.cc  image_di_Xbpp.h  image_di_impl.cc  image_di_impl.h  image_di_nobpp.cc  image_di_record.h  image_di_seldraw.cc  image_di_seldraw.h  image_di_selimpl1.cc  image_di_selimpl2.cc  image_di_selimpl3.cc  image_icon.cc  image_pdt.cc  (+42 more)
EngineTransplant/xkanon-gtk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
EngineTransplant/xkanon-gtk/contrib/: LittleEndian.c  LittleEndian.h  Makefile.in  README  audio.c  audio.h  audioIO.h  audioIO_alsa.c  audioIO_dmy.c  audioIO_esd.c  audioIO_oss.c  audioIO_solaris.c  audioMix_OSS.c  audioMix_Solaris.c  audioMix_dmy.c  cdrom.FreeBSD.c  cdrom.Irix.c  cdrom.Linux.c  cdrom.c  cdrom.empty.c  cdrom.h  cdrom.mp3.c  counter.c  counter.h  kconv.c  kconv.h  koedec.c  koedec_wpd.cc  mixer.h  movie.c  music.c  music.h  pcm.c  portab.h  system_music.cc  wavfile.c  wavfile.h  wavmix.c
GalgameScript/ab1st_script/pck_disasm/: 00_ab01a_day00_0.ss.code.txt  00_ab01b_day01_1.ss.code.txt  00_ab03a_day03_3.ss.code.txt  00_ab04a_day04_4.ss.code.txt  00_ab05a_day05_5.ss.code.txt  00_ab05b_day05_6.ss.code.txt  00_ab06a_day06_7.ss.code.txt
GalgameScript/ab1st_script/pck_txt/: 00_ab01a_day00_0.ss.txt  00_ab01b_day01_1.ss.txt  00_ab02a_day02_2.ss.txt  00_ab03a_day03_3.ss.txt  00_ab04a_day04_4.ss.txt  00_ab05a_day05_5.ss.txt  00_ab05b_day05_6.ss.txt  00_ab06a_day06_7.ss.txt  00_ab06b_day06_8.ss.txt  00_ab07a_day07_9.ss.txt  00_ab07a_day07_バスケ編_10.ss.txt  00_ab07a_day07_野球編_11.ss.txt  00_ab08a_day08_12.ss.txt  00_ab08a_day08_野田_13.ss.txt  00_ab08a_day08_食券暴く_14.ss.txt  00_ab09a_day09-15_15.ss.txt  00_ab09b_day09-15_16.ss.txt  00_ab09c_day09-15_17.ss.txt  00_ab10a_day16-17_18.ss.txt  00_ab11a_day18_19.ss.txt  00_ab12a_day19_20.ss.txt  00_ab13a_day20_21.ss.txt  00_ab14a_day21_22.ss.txt  00_ab14b_day21_23.ss.txt  00_ab15a_day22_24.ss.txt  00_ab15b_day23_25.ss.txt  00_ab16a_day24_26.ss.txt  00_ab17a_day25_27.ss.txt  00_ab17b_day25_28.ss.txt  00_ab18a_day26_29.ss.txt  00_ab19a_day27_30.ss.txt  00_ab20a_day27_31.ss.txt  01_かなで_00_32.ss.txt  01_かなで_01_33.ss.txt  01_かなで_02_34.ss.txt  01_かなで_03_35.ss.txt  01_かなで_04_36.ss.txt  01_かなで_05_37.ss.txt  01_かなで_06_38.ss.txt  01_かなで_08_39.ss.txt  (+140 more)
GalgameScript/hatsuyuki/: 追加＿単発台詞.txt  １節　プロローグ　１話1205.txt  １節　プロローグ　１話1206.txt  １節　プロローグ　１話1207.txt  １節　プロローグ　２話1208.txt  １節　プロローグ　２話1209.txt  １節　プロローグ　２話1212.txt  １節　プロローグ　２話1213.txt  １節　プロローグ　２話1214.txt  １節　プロローグ　２話1215.txt  １節　プロローグ　３話1216.txt  １節　プロローグ　３話1217.txt  １節　プロローグ　３話1218.txt  １節　プロローグ　３話1219.txt  １節　プロローグ　３話1220.txt  １節　プロローグ　３話1221.txt  １節　プロローグ　４話1222.txt  １節　プロローグ　４話1223.txt  １節　プロローグ　４話1224.txt  １節　プロローグ　５話1225.txt  ２節　__導入.txt  ２節　_場所移動バッドエンド.txt  ２節　_場所移動（竹田）①.txt  ２節　_場所移動（竹田）②.txt  ２節　_場所移動（竹田）③.txt  ２節　_場所移動（金崎）①.txt  ２節　_場所移動（金崎）②.txt  ２節　_場所移動（金崎）③.txt  ２節　_場所移動（１人飯）①.txt  ２節　_場所移動（１人飯）②.txt  ２節　_場所移動（１人飯）③.txt  ２節　１話0110.txt  ２節　１話0111.txt  ２節　１話0112.txt  ２節　１話0116.txt  ２節　２話.txt  ３節　小坂井綾　１話.txt  ３節　小坂井綾　２話.txt  ３節　小坂井綾　３話.txt  ３節　小坂井綾　４話.txt  (+37 more)
Hook/tsuyokisu_chs_dll/: tsuyokisu_chs_dll.sln
Hook/tsuyokisu_chs_dll/Release/: Log.txt
Hook/tsuyokisu_chs_dll/tsuyokisu_chs_dll/: Adler32.h  D3DFont.h  DebugInfo.cpp  DebugInfo.h  GlobalFunc.h  ReadMe.txt  dllmain.cpp  stdafx.cpp  tsuyokisu_chs_dll.cpp  tsuyokisu_chs_dll.vcxproj  tsuyokisu_chs_dll.vcxproj.filters
PSP/GIM2png/: GIM.h  GIM2png.cpp
PerlScript/: SFA2NS.pl  sjis2GBK.pl
Unpacker/GIGA/: info.txt
Unpacker/GIGA/GIGA2002GraphDecoder/: GIGA2002GraphDecoder.sln
Unpacker/GIGA/GIGA2002GraphDecoder/GIGA2002GraphDecoder/: GIGA2002GraphDecoder.cpp  GIGA2002GraphDecoder.vcxproj  GIGA2002GraphDecoder.vcxproj.filters  ReadMe.txt  stdafx.cpp
Unpacker/GIGA/GIGA2002GraphDecoder/Release/: asana_kao009.grp  エンド03a.grp  エンド03c.grp  サウンドモードa.grp
Unpacker/GIGA/GIGA2002ScriptDecoder/: GIGA2002ScriptDecoder.sln
Unpacker/GIGA/GIGA2002ScriptDecoder/GIGA2002ScriptDecoder/: GIGA2002ScriptDecoder.cpp  GIGA2002ScriptDecoder.vcxproj  GIGA2002ScriptDecoder.vcxproj.filters  ReadMe.txt  stdafx.cpp
Unpacker/GIGA/GIGA2002ScriptDecoder/Release/: main.cod  main.cod.unfilter  out
Unpacker/GIGA/GIGA2002UnPck/: GIGA2002UnPck.sln
Unpacker/GIGA/GIGA2002UnPck/GIGA2002UnPck/: GIGA2002UnPck.cpp  GIGA2002UnPck.vcxproj  GIGA2002UnPck.vcxproj.filters  ReadMe.txt  stdafx.cpp
Unpacker/GIGA/GIGA2002UnPck/Release/: work.pac  あおいプール.grp  あおいプール.spr  あおいホテル.grp  あおいホテル.spr  かのこ和風レストラン.grp  かのこ和風レストラン.spr  かのこ輸入雑貨店.grp  (+69 more)
Unpacker/KrkrTextDecryption/Release/: 秀明a.txt  秀明a_0.txt
Unpacker/crass/Majiro_mask_me/: Majiro_mask_me.cpp
(+47 files in other folders)
